fix alignment of account dates on member result (#173)

--- a/srcmedia/scss/members/_member-result.scss
+++ b/srcmedia/scss/members/_member-result.scss
@@ -56,6 +56,10 @@
         width: 100%;
         position: relative;
         display: flex;
+
+        @media (min-width: $breakpoint-s) {
+            width: fit-content;
+        }
     }
 
     .account {
